--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,12 +15,12 @@ pool:
   vmImage: 'ubuntu-16.04'
 
 steps:
-  - bash: apt-get install -y libboost-all-dev
-  - bash: g++ -std=c++11 -I/usr/include/boost/asio -I/usr/include/boost -o binary.out main.cpp connection.cpp connection_manager.cpp mime_types.cpp reply.cpp request_handler.cpp request_parser.cpp server.cpp -lboost_system -lboost_thread -lpthread
-  - bash: BUILD_NUMBER = $r.$b.$c
-  - bash: mv binary.out $BUILD_NUMBER.out
-  - bash: README=./readme.txt
+  - bash: sudo apt-get install -y libboost-all-dev
+  - bash: sudo g++ -std=c++11 -I/usr/include/boost/asio -I/usr/include/boost -o binary.out main.cpp connection.cpp connection_manager.cpp mime_types.cpp reply.cpp request_handler.cpp request_parser.cpp server.cpp -lboost_system -lboost_thread -lpthread
+  - bash: sudo BUILD_NUMBER = $r.$b.$c
+  - bash: sudo mv binary.out $BUILD_NUMBER.out
+  - bash: sudo README=./readme.txt
   - bash: if [ ! -f readme.txt ];
           then echo $(touch readme.txt)
           fi
-  - bash: echo $BUILD_NUMBER | tee -a $README
+  - bash: sudo echo $BUILD_NUMBER | tee -a $README
