--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,11 +7,11 @@ trigger:
 - master
 
 variables:
-  r: Release
-  b: $(Build.BuildNumber)
+  r: $(Date:yyyyMMdd)
+  b: $(Rev:.r)
   c: $(Build.SourceVersion)
-  BUILD_NUMBER: $r.$b.$c
-  README: ./readme.txt 
+  BUILD_NUMBER: $r$b.$c
+  README: readme.txt 
 
 pool:
   vmImage: 'ubuntu-16.04'
@@ -19,8 +19,16 @@ pool:
 steps:
   - script: sudo apt-get install -y libboost-all-dev
   - script: sudo g++ -std=c++11 -I/usr/include/boost/asio -I/usr/include/boost -o binary.out main.cpp connection.cpp connection_manager.cpp mime_types.cpp reply.cpp request_handler.cpp request_parser.cpp server.cpp -lboost_system -lboost_thread -lpthread
-
-  - script: sudo mv binary.out $BUILD_NUMBER.out
+ 
+  - script: sudo mv binary.out $env:BUILD_ARTIFACTSTAGINGDIRECTORY/$BUILD_NUMBER.out
   
 
-  - script: sudo echo $BUILD_NUMBER | tee -a $README
+  - script: sudo echo $BUILD_NUMBER | tee -a $env:BUILD_ARTIFACTSTAGINGDIRECTORY/$README
+
+  - task: CopyFiles@2
+    displayName: 'Copy Files to: $(Build.ArtifactStagingDirectory)'
+    inputs:
+      Contents: |
+       \*.out
+       \readme.txt
+      TargetFolder: '$(Build.ArtifactStagingDirectory)'
