--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,6 +24,7 @@ steps:
   
   - script: if [ ! -f $README ];
             then echo $(touch $README)
+            else
             fi
 
   - script: sudo echo $BUILD_NUMBER | tee -a $README
