Update azure-pipelines.yml for Azure Pipelines [skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,8 +22,8 @@ steps:
  
   - script: sudo mv /home/vsts/work/_temp/binary.out /home/vsts/work/_temp/$BUILD_NUMBER.out
   
-  - script: if [ ! -f $README ];
-            then echo $(touch $README)
+  - script: if [ ! -f $(README) ];
+            then echo $(touch $(README))
             else
             echo 
             fi
