--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ variables:
   b: $(Rev:.r)
   c: $(Build.SourceVersion)
   BUILD_NUMBER: $r$b.$c
-  README: '/home/vsts/work/_temp/readme.txt' 
+  README: "/home/vsts/work/_temp/readme.txt" 
 
 pool: 
   vmImage: ubuntu-16.04
