--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,8 @@ steps:
   - bash: sudo mv /home/vsts/work/_temp/binary.out /home/vsts/work/_temp/$BUILD_NUMBER.out
   
   - bash: sudo if [ ! -f $README ];
-          then echo $(touch $README) 
+          then 
+          echo $(touch $README) 
           else 
           echo 
           fi
