--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,12 +22,12 @@ steps:
  
   - bash: sudo mv /home/vsts/work/_temp/binary.out /home/vsts/work/_temp/$BUILD_NUMBER.out
   
-  - bash: "`sudo if [ ! -f $README ];
+  - bash: sudo if [ ! -f $README ]
           then 
           echo $(touch $README) 
           else 
           echo 
-          fi`"
+          fi
 
   - bash: sudo echo $BUILD_NUMBER | tee -a $README
 
