Update azure-pipelines.yml for Azure Pipelines [skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ variables:
   r: $(Date:yyyyMMdd)
   b: $(Rev:.r)
   c: $(Build.SourceVersion)
-  BUILD_NUMBER: $(Date:yyyyMMdd)$(Rev:.r).$(c)
+  BUILD_NUMBER: $(r)$(b).$(c)
   README: "/home/vsts/work/_temp/readme.txt" 
 
 pool: 
