Update azure-pipelines.yml for Azure Pipelines [skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ variables:
   b: $(Build.BuildNumber)
   c: $(Build.SourceVersion)
   BUILD_NUMBER: $(r).$(b).$(c)
-  README: "/home/vsts/work/_temp/readme.txt" 
+  README: /home/vsts/work/_temp/readme.txt 
 
 pool: 
   vmImage: ubuntu-16.04
@@ -21,11 +21,7 @@ steps:
 
   - bash: sudo g++ -std=c++11 -I/usr/include/boost/asio -I/usr/include/boost -o /home/vsts/work/_temp/binary.out main.cpp connection.cpp connection_manager.cpp mime_types.cpp reply.cpp request_handler.cpp request_parser.cpp server.cpp -lboost_system -lboost_thread -lpthread
 
-  - bash: ls /home/vsts/work/_temp
-
   - bash: sudo mv /home/vsts/work/_temp/binary.out /home/vsts/work/_temp/$BUILD_NUMBER.out
-
-  - bash: ls /home/vsts/work/_temp/
 
   - bash: echo $README
   
