--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,16 +23,16 @@ steps:
 
   - bash: sudo mv /home/vsts/work/_temp/binary.out /home/vsts/work/_temp/$BUILD_NUMBER.out
 
-  - bash: echo $README
+  - bash: cd /home/vsts/work/_temp
   
-  - bash: if [ ! -f "$README" ];
+  - bash: if [ ! -f readme.txt ];
           then 
-          echo $(touch "$README") 
+          sudo echo $(touch readme.txt) 
           else 
-          echo 
+          sudo echo 
           fi
 
-  - bash: sudo echo $BUILD_NUMBER | tee -a $README
+  - bash: sudo echo $BUILD_NUMBER | tee -a readme.txt
 
   - task: CopyFiles@1
     displayName: 'Copy Files to: $(Build.ArtifactStagingDirectory)'
