Update azure-pipelines.yml for Azure Pipelines [skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,8 @@ steps:
 
   - bash: cd /home/vsts/work/_temp
   
-  - bash: if [ ! -f $(README) ];
+  - bash: |
+          if [ ! -f $(README) ];
           then 
           sudo touch $(README) 
           else 
