Update azure-pipelines.yml for Azure Pipelines [skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,7 +38,8 @@ steps:
   - task: CopyFiles@1
     displayName: 'Copy Files to: $(Build.ArtifactStagingDirectory)'
     inputs:
+      SourceFolder: /home/vsts/work/_temp/
       Contents: |
-       /home/vsts/work/_temp/*.out
-       /home/vsts/work/_temp/readme.txt
+       *.out
+       readme.txt
       TargetFolder: '$(Build.ArtifactStagingDirectory)'
