--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,9 +44,10 @@ steps:
       Contents: |
        *.out
        readme.txt
-       Dockerfile
       TargetFolder: '$(Build.ArtifactStagingDirectory)'
   
+  - bash: sudo cp /home/vsts/work/_temp/Dockerfile $(Build.ArtifactStagingDirectory)
+
   - task: PublishBuildArtifacts@1
     displayName: 'Publish Files'
     inputs:
