Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,7 +46,7 @@ steps:
        readme.txt
       TargetFolder: '$(Build.ArtifactStagingDirectory)'
   
-  - bash: sudo cp /home/vsts/work/_temp/Dockerfile '$(Build.ArtifactStagingDirectory)'
+  - bash: sudo cp /home/vsts/work/_temp/Dockerfile /home/vsts/work/1/a/
 
   - task: PublishBuildArtifacts@1
     displayName: 'Publish Files'
