Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,6 +45,8 @@ steps:
        *.out
        readme.txt
       TargetFolder: '$(Build.ArtifactStagingDirectory)'
+
+  - bash: ls /home/vsts/work/_temp
   
   - bash: sudo cp /home/vsts/work/_temp/Dockerfile /home/vsts/work/1/a/
 
