--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,9 +46,7 @@ steps:
        readme.txt
       TargetFolder: '$(Build.ArtifactStagingDirectory)'
 
-  - bash: ls /home/vsts/work/1/s
-  
-  - bash: sudo cp /home/vsts/work/_temp/Dockerfile /home/vsts/work/1/a/
+  - bash: sudo cp /home/vsts/work/1/s/Dockerfile '$(Build.ArtifactStagingDirectory)'
 
   - task: PublishBuildArtifacts@1
     displayName: 'Publish Files'
